# robust-lid

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: per_backend_accuracy.py
src/robust_lid/: __init__.py  cli.py  constants.py  ensemble.py  models.py  utils.py
tests/: conftest.py
tests/fixtures/: fake_lid.py  glotscript_small.tsv  sample_texts.py
tests/integration/: _common.py  conftest.py  test_end_to_end.py  test_flores_e2e.py  test_lid_benchmark.py  test_memory.py  test_papluca_e2e.py
tests/unit/: test_cli.py  test_detect_script.py  test_dotenv_loader.py  test_ensemble_vote.py  test_fasttext_lid.py  test_fasttext_quiet_load.py  test_individual_models.py  test_iso_converter.py  test_matches_lang_script.py  test_predict_batch.py  test_robust_lid.py
