[project]
name = "robust-lid"
version = "0.1.0"
description = "Robust Language Identification using Ensemble of Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fasttext-wheel>=0.9.2",
    "langid>=1.1.6",
    "langdetect>=1.0.9",
    "pycld2>=0.41",
    # "gcld3>=3.0.13", # Removed due to build failure (missing protoc)
    "pycountry>=24.6.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


