[project]
name = "robust-lid"
version = "0.1.0"
description = "Robust Language Identification using an ensemble of 5-7 LID backends"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NoUnique" }]
keywords = [
    "language-identification",
    "lid",
    "nlp",
    "fasttext",
    "glotlid",
    "cld2",
    "cld3",
    "langid",
    "langdetect",
    "ensemble",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "fasttext-wheel>=0.9.2",
    "langid>=1.1.6",
    "langdetect>=1.0.9",
    "pycld2>=0.41",
    # "gcld3>=3.0.13", # optional — install via robust-lid[cld3] (needs system protoc)
    "pycountry>=24.6.1",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/NoUnique/robust-lid"
Repository = "https://github.com/NoUnique/robust-lid"
Issues = "https://github.com/NoUnique/robust-lid/issues"
Changelog = "https://github.com/NoUnique/robust-lid/blob/main/CHANGELOG.md"

[project.scripts]
rlid = "robust_lid.cli:main"
robust-lid = "robust_lid.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "types-requests>=2.31.0",
    "python-semantic-release>=9.0",
    "twine>=5.0",
]
cld3 = [
    "gcld3>=3.0.13",  # requires system protoc; see README
]
e2e = [
    "datasets>=2.14.0",
    "gcld3>=3.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/robust_lid",
    "--cov-report=term-missing",
]
markers = [
    "unit: pure unit tests with no I/O",
    "integration: end-to-end tests",
    "network: requires network access (skipped by default)",
    "slow: slow tests (skipped by default)",
]

[tool.coverage.run]
source = ["src/robust_lid"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fasttext",
    "langid",
    "langid.*",
    "langdetect",
    "langdetect.*",
    "pycld2",
    "gcld3",
    "pycountry",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# python-semantic-release — commits drive version bumps.
#
# On each push to main the release workflow runs `semantic-release version`:
# if there is any commit since the last tag whose type is in `minor_tags`
# or `patch_tags` (or that declares a breaking change), the version in
# `pyproject.toml`'s `project.version` is bumped, a new `vX.Y.Z` tag is
# pushed, and CHANGELOG.md is regenerated. PyPI upload happens in a
# separate workflow step via OIDC Trusted Publishing (no token in CI).
#
# `major_on_zero = false` keeps us on 0.x — a breaking change on 0.x bumps
# minor instead of promoting to 1.0 prematurely. Flip when the API stabilises.
# -----------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "v{version}"
commit_message = "chore(release): v{version} [skip ci]"
build_command = "uv build"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true
# Stay on 0.x until API stabilises: disallow promotion to 1.0 on breaking
# changes, keep bumping minor/patch within 0.x.
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat", "fix", "perf",
    "refactor", "docs", "style", "test",
    "build", "ci", "chore",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^Merge ",
]
